--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <div class="flex-container">
-            <img src="images/me final.jpg", width="300px" height="400px">
+            <img src="images/me final.jpg", alt="me" width="300px" height="400px">
             <div class="text-container">
                 <h1>Welcome to my website!</h1>
                 <p> I'm Danny. I'm a <strong>science major</strong> at the University of Idaho. Some of my hobbies include collecting <strong>Pokemon</strong> cards and playing <strong>Table Tennis</strong>.</p>
@@ -35,8 +35,9 @@
                 </h2>
                 <p> Here at the University, I am the president of the Table Tennis Club. I joined the club during my freshman year and worked my way up, becoming the president during my junior year. Other than Table Tennis, I love my cat, his name is Aster. My sister got him back in 2018, so we've had him for a few years now. He lives back at home with my parents, but I miss him everyday. Here is a picture of him.   </p>
             </div>
-            <img src="images/asterpng.png", width="300px" height="400px">
+            <img src="images/asterpng.png", alt="aster" width="300px" height="400px">
         </div>
     </section>
 </body>
+
 </html>
