--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="text-container">
                 <h1>Welcome to my website!</h1>
                 <p> I'm Danny. I'm a <strong>science major</strong> at the University of Idaho. Some of my hobbies include collecting <strong>Pokemon</strong> cards and playing <strong>Table Tennis</strong>.</p>
-                <a href="" class="cta-button"> Follow Me on Insta </a>
+                <a href="https://instagram.com/danny_g204" class="cta-button"> Follow Me on Insta </a>
                 <a href="https://uidaho.campuslabs.com/engage/organization/vandal-table-tennis-club" class = "cta-button secondary">Join Table Tennis </a>
             </div>
         </div>
@@ -41,3 +41,4 @@
 </body>
 
 </html>
+
